--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cpu-stat": "^2.0.1",
     "dateformat": "^3.0.3",
     "discord.js": "^12.4.1",
+    "dotenv-flow": "^3.2.0",
     "got": "^11.8.0",
     "imageapi.js": "^1.0.19",
     "moment": "^2.29.1",
