--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.3.3",
     "canvas": "^2.6.1",
+    "canvas-constructor": "^4.1.0",
     "cpu-stat": "^2.0.1",
     "dateformat": "^3.0.3",
     "discord.js": "^12.4.1",
@@ -21,6 +23,9 @@
     "node-fetch": "^2.6.1",
     "os": "^0.1.1",
     "parse-ms": "^2.1.0",
-    "quick.db": "^7.1.3"
+    "quick.db": "^7.1.3",
+    "request-promise-native": "^1.0.9",
+    "ytdl-core": "^4.0.3",
+    "ytsearcher": "^1.2.3"
   }
 }
