--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dateformat": "^3.0.3",
     "discord.js": "^12.4.1",
     "dotenv-flow": "^3.2.0",
+    "enmap": "^5.8.2",
+    "express": "^4.17.1",
     "got": "^11.8.0",
     "imageapi.js": "^1.0.19",
     "moment": "^2.29.1",
@@ -25,6 +27,7 @@
     "parse-ms": "^2.1.0",
     "quick.db": "^7.1.3",
     "request-promise-native": "^1.0.9",
+    "sqlite3": "^5.0.0",
     "ytdl-core": "^4.0.3",
     "ytsearcher": "^1.2.3"
   }
