--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,12 +1,4 @@
 # These are supported funding model platforms
 
 github: [Bereket Semagn]
-patreon: Bereket Semagn
-open_collective: Bereket Semagn
-ko_fi: Bereket Semagn 
-tidelift: npm/babel
-community_bridge: cloud-foundry
-liberapay: cloud-foundry
-issuehunt: Bereket Semagn
-otechie: Bereket Semagn
-custom: https://paypal.me/BereketSemagn
+patreon: GizmoDiscord
